Overflow Glitch - Events Fixed

--- a/scss/pages/events/_root.scss
+++ b/scss/pages/events/_root.scss
@@ -5,6 +5,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 
   &__overlay {
     background: #000;
